[gd_scene load_steps=23 format=3 uid="uid://q1yjdcnnetr4"]

[ext_resource type="Script" uid="uid://bgt50sf3dooe2" path="res://Scripts/FlipQuizVehicle.gd" id="1_7p1sg"]
[ext_resource type="Texture2D" uid="uid://ciaa4qe2o2juf" path="res://gui/Update/UI/ui 3.png" id="2_y0fi5"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="3_ma1yg"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="4_4itq8"]
[ext_resource type="Texture2D" uid="uid://5kclvhwf1uke" path="res://gui/Update/UI/green button.png" id="5_88e7u"]
[ext_resource type="Texture2D" uid="uid://qmmpx3uab5h7" path="res://gui/Update/UI/next button.png" id="6_p0mf6"]
[ext_resource type="AudioStream" uid="uid://nnyriivme1h7" path="res://audio/vehicles sound effect/vehicles-car (mp3cut.net).mp3" id="7_22x63"]
[ext_resource type="AudioStream" uid="uid://11gqcsqeoxn4" path="res://audio/vehicles sound effect/vehicles-truck (mp3cut.net).mp3" id="8_d1161"]
[ext_resource type="AudioStream" uid="uid://d3x7m130eewix" path="res://audio/vehicles sound effect/vehicles-train (mp3cut.net).mp3" id="9_4j16c"]
[ext_resource type="AudioStream" uid="uid://df4jx5mo6nj3k" path="res://audio/vehicles sound effect/vehicles-airplane (mp3cut.net).mp3" id="10_6r5gh"]
[ext_resource type="AudioStream" uid="uid://cjkpe4p5gdq5y" path="res://audio/vehicles sound effect/vehicles-boat (mp3cut.net).mp3" id="11_5sqj8"]
[ext_resource type="AudioStream" uid="uid://la1lsc6v00fj" path="res://audio/vehicles sound effect/vehicles-bus (mp3cut.net).mp3" id="12_vmau7"]
[ext_resource type="Texture2D" uid="uid://c8vnqmxwy0lsw" path="res://gui/Update/icons/small settings.png" id="13_settings"]
[ext_resource type="Texture2D" uid="uid://bb3yuiy6n0i2" path="res://gui/Update/icons/small settings_hover.png" id="14_settings_hover"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22x63"]
bg_color = Color(0.980392, 0.870588, 0.870588, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.901961, 0.301961, 0.301961, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1161"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4j16c"]
bg_color = Color(0.901961, 0.301961, 0.301961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6r5gh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5sqj8"]
bg_color = Color(0.980392, 0.870588, 0.870588, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.901961, 0.301961, 0.301961, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmau7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oebjl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1i48n"]
bg_color = Color(0.980392, 0.870588, 0.870588, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.901961, 0.301961, 0.301961, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[node name="VehicleFlipScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7p1sg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y0fi5")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 41.0
offset_right = -58.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HeaderPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_22x63")

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ProgressContainer" type="HBoxContainer" parent="MainContainer/HeaderPanel/HeaderContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15
alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/HeaderPanel/HeaderContainer/ProgressContainer"]
custom_minimum_size = Vector2(250, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_styles/background = SubResource("StyleBoxFlat_d1161")
theme_override_styles/fill = SubResource("StyleBoxFlat_4j16c")

[node name="ProgressLabel" type="Label" parent="MainContainer/HeaderPanel/HeaderContainer/ProgressContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 16
text = "Complete"

[node name="TitleContainer" type="HBoxContainer" parent="MainContainer/HeaderPanel/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainContainer/HeaderPanel/HeaderContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 32
text = "Vehicle Memory Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MainContainer/HeaderPanel/HeaderContainer/TitleContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_6r5gh")
text = "Back"
icon = ExtResource("4_4itq8")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ContentContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InstructionPanel" type="Panel" parent="MainContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5sqj8")

[node name="InstructionContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/InstructionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 187.0
offset_top = 4.0
offset_right = 147.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.727786, 0.727786)
theme_override_constants/separation = 10

[node name="TargetLabel" type="Label" parent="MainContainer/ContentContainer/InstructionPanel/InstructionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 48
text = "Loading..."
horizontal_alignment = 1

[node name="ControlsContainer" type="HBoxContainer" parent="MainContainer/ContentContainer/InstructionPanel/InstructionContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="PreviousButton" type="Button" parent="MainContainer/ContentContainer/InstructionPanel/InstructionContainer/ControlsContainer"]
visible = false
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_vmau7")
text = "Previous"
icon = ExtResource("4_4itq8")
flat = true
icon_alignment = 1
expand_icon = true

[node name="HearButton" type="Button" parent="MainContainer/ContentContainer/InstructionPanel/InstructionContainer/ControlsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_vmau7")
text = "Hear"
icon = ExtResource("5_88e7u")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NextButton" type="Button" parent="MainContainer/ContentContainer/InstructionPanel/InstructionContainer/ControlsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_vmau7")
text = "Next"
icon = ExtResource("4_4itq8")
flat = true
icon_alignment = 1
expand_icon = true

[node name="GuideButton" type="Button" parent="MainContainer/ContentContainer/InstructionPanel"]
layout_mode = 0
offset_left = 30.0
offset_right = 129.0
offset_bottom = 81.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oebjl")
text = "Guide"
icon = ExtResource("6_p0mf6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TTSSettingButton" type="TextureButton" parent="MainContainer/ContentContainer/InstructionPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 67.0
offset_right = 88.0
offset_bottom = 105.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_settings")
texture_hover = ExtResource("14_settings_hover")
stretch_mode = 5

[node name="GamePanel" type="Panel" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1i48n")

[node name="GameContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/GamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ScoreContainer" type="HBoxContainer" parent="MainContainer/ContentContainer/GamePanel/GameContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="ScoreLabel" type="Label" parent="MainContainer/ContentContainer/GamePanel/GameContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 24
text = "Matches: 0/4"
horizontal_alignment = 1

[node name="AttemptsLabel" type="Label" parent="MainContainer/ContentContainer/GamePanel/GameContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 24
text = "Attempts: 0"
horizontal_alignment = 1

[node name="EncouragementLabel" type="Label" parent="MainContainer/ContentContainer/GamePanel/GameContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 0.2, 1)
theme_override_fonts/font = ExtResource("3_ma1yg")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="CardsContainer" type="GridContainer" parent="MainContainer/ContentContainer/GamePanel/GameContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="car_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_22x63")

[node name="truck_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_d1161")

[node name="train_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4j16c")

[node name="airplane_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_6r5gh")

[node name="boat_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_5sqj8")

[node name="bus_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_vmau7")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MainContainer/HeaderPanel/HeaderContainer/TitleContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainContainer/ContentContainer/InstructionPanel/GuideButton" to="." method="_on_guide_button_pressed"]
[connection signal="pressed" from="MainContainer/ContentContainer/InstructionPanel/TTSSettingButton" to="." method="_on_tts_setting_button_pressed"]
